<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home"
    tools:context="com.example.trile.egame.RegisterLogin.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center|top">

            <EditText
                android:id="@+id/edt_mail_login"
                android:hint="@string/hint_mail"
                android:drawableLeft="@drawable/mail"
                style="@style/edt_custom"/>

            <EditText
                android:id="@+id/edt_pass_login"
                android:hint="@string/hint_pass"
                android:drawableLeft="@drawable/pass"
                android:inputType="textPassword"
                style="@style/edt_custom"/>

            <Button
                android:id="@+id/btnLOGIN"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:text="@string/btn_login"
                android:gravity="center"
                android:background="@drawable/btn"/>

            <TextView
                android:id="@+id/tvREGISTER"
                style="@style/text_login"
                android:text="@string/text_register"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
