<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:background="@color/dialog">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/GAMEOVER"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|right"
                android:orientation="vertical">



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/over"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|top">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="center">

            <TextView
                android:id="@+id/btnPlayNextGameOver"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@color/dialog"
                android:text="@string/PLAY_NEXT"/>

            <TextView
                android:id="@+id/btnLearn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@color/dialog"
                android:text="@string/LEARN"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>