<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home"
    tools:context="com.example.trile.egame.LevelPlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/level"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/theme_border_level_2">

                        <LinearLayout
                            style="@style/theme_border_level_1"
                            android:background="@drawable/custom_view_list">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/level"/>

                            <TextView
                                style="@style/text_level"
                                android:text="@string/lv1"/>


                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/theme_border_level_2">

                        <LinearLayout
                            style="@style/theme_border_level_1"
                            android:background="@drawable/custom_view_list">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/level"/>

                            <TextView
                                style="@style/text_level"
                                android:text="@string/lv2"/>


                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/theme_border_level_2">

                        <LinearLayout
                            style="@style/theme_border_level_1"
                            android:background="@drawable/custom_view_list">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/level"/>

                            <TextView
                                style="@style/text_level"
                                android:text="@string/lv3"/>


                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/theme_border_level_2">

                        <LinearLayout
                            style="@style/theme_border_level_1"
                            android:background="@drawable/custom_view_list">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/level"/>

                            <TextView
                                style="@style/text_level"
                                android:text="@string/lv4" />


                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/theme_border_level_2">

                        <LinearLayout
                            style="@style/theme_border_level_1"
                            android:background="@drawable/custom_view_list">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/level"/>

                            <TextView
                                style="@style/text_level"
                                android:text="@string/lv5"/>


                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/theme_border_level_2">

                        <LinearLayout
                            style="@style/theme_border_level_1"
                            android:background="@drawable/custom_view_list">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/level"/>

                            <TextView
                                style="@style/text_level"
                                android:text="@string/lv6"/>


                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
