<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home"
    tools:context="com.example.trile.egame.MenuHome.Practice_Vocabulary_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center">

            <ImageView
                android:id="@+id/closeTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/theme"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/theme_main">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/theme_border_2">

                            <LinearLayout
                                android:id="@+id/btn_Animal"
                                style="@style/theme_border_1">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/theme_animal" />

                                <TextView
                                    style="@style/theme_text"
                                    android:text="@string/theme_animal"
                                    android:textColor="@android:color/white" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/theme_border_2">

                            <LinearLayout
                                style="@style/theme_border_1"
                                android:id="@+id/btn_Study">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/theme_book"/>

                                <TextView
                                    style="@style/theme_text"
                                    android:text="@string/theme_learch"
                                    android:textColor="@android:color/white"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    style="@style/theme_main">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/theme_border_2">

                            <LinearLayout
                                style="@style/theme_border_1"
                                android:id="@+id/btn_Family">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/theme_live"/>

                                <TextView
                                    style="@style/theme_text"
                                    android:text="@string/theme_live"
                                    android:textColor="@android:color/white"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/theme_border_2">

                            <LinearLayout
                                style="@style/theme_border_1"
                                android:id="@+id/btn_Object">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/theme_item"/>

                                <TextView
                                    style="@style/theme_text"
                                    android:text="@string/theme_item"
                                    android:textColor="@android:color/white"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    style="@style/theme_main">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/theme_border_2">

                            <LinearLayout
                                style="@style/theme_border_1"
                                android:id="@+id/btn_Country">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/theme_flag"/>

                                <TextView
                                    style="@style/theme_text"
                                    android:text="@string/theme_flag"
                                    android:textColor="@android:color/white"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/theme_border_2">

                            <LinearLayout
                                style="@style/theme_border_1"
                                android:id="@+id/btn_Transport">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/theme_car"/>

                                <TextView
                                    style="@style/theme_text"
                                    android:text="@string/theme_car"
                                    android:textColor="@android:color/white"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
